--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     	<meta name="Relaxr" content="New York tech start-up">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+		<title>Relaxr | Landing Page</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
 	</head>
 	<body>
@@ -32,19 +33,25 @@
 			</main>
 
 			<blockquote>
-				<p>"Relaxr changed my life. I've been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work." </p>
-				<p>- Amanda, Intuit</p>
+				<div id="testimonial">
+					<p>"Relaxr changed my life. I've been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work." </p>
+					<p><span id="author">- Amanda, Intuit</span></p>
+				</div>
 			</blockquote>
 
 			<section id="signup">
-				<button>Sign Up Now!</button>
+				<div id="sign-up-button">
+					<button>Sign Up Now!</button>
+				</div>
 			</section>
 
 			<footer>
 				<h1>Relaxr</h1>
-				<img src="images/facebook.png" href="facebook.com" alt="facebook logo">
-				<img src="images/twitter.png" href="twitter.com" alt="twitter logo">
-				&copy; 2015 Relaxr. 
+					<div id="social-links">
+						<a href="https://www.facebook.com"><img src="images/facebook.png" href="facebook.com" alt="facebook logo" id="facebook"></a>
+						<a href="https://www.twitter.com"><img src="images/twitter.png" href="twitter.com" alt="twitter logo" id="twitter"></a>
+					</div>	
+				<p>&copy; 2015 Relaxr.</p> 
 			</footer>
 		</div><!-- #container -->
 	</body>
